--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download Proposal</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+        <!--<a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a> -->
       {% endif %}
     </header>
 
